# Ember

./: .env.example  .gitignore  EMBER_SPEC.md  EXPLAINER.md  OVERVIEW.md  README.md  pyproject.toml
backend/: app.py  cli.py  config.py  report_html.py  smoke.py
backend/benchmark/: evaluation.py  harness.py  report.py  scoring.py  workloads.py
backend/cache/: embeddings.py  semantic.py
backend/db/: models.py  store.py
backend/measurement/: calculator.py  carbon.py  energy.py  prefetch.py  spend.py
backend/providers/: anthropic.py  base.py  openai_compat.py  registry.py
backend/router/: classifier.py  quality_gate.py  route.py  selector.py
backend/tui/: _dev_synthetic.py  _mock_report.py  race.py  state.py
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.jsx  main.jsx  tokens.css
data/: energy_factors.json  fallback_intensity.json  price_table.json
data/workloads/: default.json
ember.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_workload.py
specs/: 00-overview.md  01-architecture.md  02-providers.md  03-measurement.md  04-router.md  05-benchmark.md  06-api-db.md  06-storage.md  07-cli.md  07-dashboard.md  08-build-plan.md  09-evaluation.md  10-okrs.md  README.md
specs/tasks/: P1-backend-core.md  P2-router-providers.md  (+3 more)
tests/: conftest.py  test_calculator.py  test_carbon.py  test_config.py  test_data_tables.py  test_energy.py  test_evaluation.py  test_harness.py  test_providers.py  test_router.py  test_scoring.py  test_semantic_cache.py  test_spend.py  test_store.py  test_workloads.py
(+2 files in other folders)
