[project]
name = "ember"
version = "0.1.0"
description = "Carbon-aware AI inference orchestrator — routes each query to the smallest model that passes a quality gate, priced and carbon-scored transparently"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["backend"]
