[project]
name = "ember"
version = "0.1.0"
description = "Carbon-aware AI inference orchestrator — routes each query to the smallest model that passes a quality gate, priced and carbon-scored transparently"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "rich>=13.7",
    "textual>=0.80",
    "pymongo>=4.6",
    "voyageai>=0.2",
]

[project.scripts]
ember = "backend.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["backend"]
